--- a/Bitacora(Gerardo)/styles/style.css
+++ b/Bitacora(Gerardo)/styles/style.css
@@ -6,16 +6,16 @@ h1,h2,h3{/*h1*/
     color: rgb(255, 0, 0);
     font-size: 30px;/*px quiere decir "pixeles":Es el tamaño de la fuente base es ahora de 10 pixeles de altura*/
     text-align: center;/*centramos el texto*/
-    font-family: "cursive";
+    font-family: "cursive";/*fuente de la letra*/
 }
 
 p,li{/*comentarios y listas*/
     font-size: 20px;/*px quiere decir "pixeles":Es el tamaño de la fuente base es ahora de 10 pixeles de altura*/
     line-height:2;/*altura de las lineas*/
     letter-spacing: 0px;/*espacio entre letras*/
-    font-family: "Arial";
+    font-family: "Arial";/*fuente de la letra*/
 }
 
 body{
-    background-color: rgb(248, 234, 254);
+    background-color: rgb(248, 234, 254);/*color del fondo*/
 }
