--- a/Bitacora(Gerardo)/styles/style.css
+++ b/Bitacora(Gerardo)/styles/style.css
@@ -2,8 +2,8 @@ html {/*html*/
     font-size: 22px; /*px quiere decir "pixeles":Es el tamaño de la fuente base es ahora de 10 pixeles de altura*/
     font-family:"Open Sans",sans-serif;/*Este debe ser el resto de el resultado que obtuviste de google fonts*/
 }
-h1,h2,h3{/*h1*/
-    color: rgb(255, 0, 0);
+h1,h2,h3,h4{/*h1*/
+    color: rgb(0, 221, 255);
     font-size: 30px;/*px quiere decir "pixeles":Es el tamaño de la fuente base es ahora de 10 pixeles de altura*/
     text-align: center;/*centramos el texto*/
     font-family: "cursive";/*fuente de la letra*/
@@ -17,5 +17,5 @@ p,li{/*comentarios y listas*/
 }
 
 body{
-    background-color: rgb(248, 234, 254);/*color del fondo*/
+    background-color: rgb(255, 255, 255);/*color del fondo*/
 }
